Fixes z-index of sticky toolbar

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -27,3 +27,6 @@
     color:#000;
     border-style: solid;
 }
+:global(.page-toolbar--sticky) {
+    z-index: 201;
+}
